# BatteryTemplateProject

./: CMakeLists.txt  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  generate-win.bat  graph_info.json  premake5.lua
include/: BatteryApp.h  Fonts.h  MyPanel.h  UserInterface.h
src/: BatteryApp.cpp
